Fix CSS spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,9 +23,13 @@ $transparent-white-thin: rgba(255,255,255,0.2);
 $transparent-white-medium: rgba(255,255,255,0.5);
 $transparent-white-thick:rgba(255,255,255,0.8);
 
-%font-awesome { font-family: 'Font Awesome 5 Free' !important; font-weight: 900 !important; }
+%font-awesome {
+	font-family: 'Font Awesome 5 Free' !important; font-weight: 900 !important;
+}
 
-body, button { font: 1.0em $font-stack; }
+body, button {
+	font: 1.0em $font-stack;
+}
 
 h1, h2, h3, h4 {
 	color: $transparent-black-thick;
@@ -36,21 +40,25 @@ h1 {
 	font-weight: 700;
 	padding-bottom: 0.5rem;
 }
+
 h2 {
 	font-size: 1.6rem;
 	font-weight: 300;
 	padding-bottom: 0.5rem;
 }
+
 h3 {
 	font-size: 2.0rem;
 	font-weight: 700;
 	padding-bottom: 0.5rem;
 }
+
 h4 { 
 	font-size: 1.5rem;
 	font-weight: 700;
 	padding-bottom: 0.5rem;
 }
+
 p {
 	font-size: 1.2rem;
 	line-height: 1.6rem;
@@ -58,6 +66,7 @@ p {
 	color: $transparent-black-medium;
 	font-weight: 300;
 }
+
 strong { font-weight: 700; }
 
 #menu {
@@ -80,6 +89,7 @@ strong { font-weight: 700; }
 		}
 	}
 }
+
 #menu.mobile {
 	display: none;
 	position: fixed;
@@ -111,6 +121,7 @@ strong { font-weight: 700; }
 		}
 	}
 }
+
 .get, #hamburger {
 	float: right;
 	display: inline-block;
@@ -128,9 +139,11 @@ strong { font-weight: 700; }
 		}
 	}
 }
+
 .get {
 	padding-right: 0;
 }
+
 #hamburger {
 	display: none;
 	padding: 0 0 0 20px;
@@ -152,12 +165,15 @@ strong { font-weight: 700; }
 	margin: 30px auto 10px;
 	width: 300px;
 }
+
 .flip-clock-label {
     display: none;
 }
+
 .flip-clock-dot {
 	background: #cbcbcb;
 }
+
 .button {
 	position: relative;
 	display: inline-block;
@@ -396,6 +412,7 @@ strong { font-weight: 700; }
 		}
 	}
 }
+
 .accordion {
 	/* Begin Reset Button Style */
 	width: 100%;
@@ -424,6 +441,7 @@ strong { font-weight: 700; }
 		transform: rotate(-180deg);
 	}
 }
+
 .panel {
 	max-height: 0;
 	overflow: hidden;
